28503 add event list and venue list pages

--- a/static-html/venue-list-page.html
+++ b/static-html/venue-list-page.html
@@ -215,7 +215,7 @@
 
                                 <article class="postPage">
                                     <!--    Post title  -->
-                                    <h1 class="postPage-title u-text--center">Arts Calendar</h1>
+                                    <h1 class="postPage-title u-text--center">Venue Calendar</h1>
 
                                     <!--    Post Content    -->
                                     <div class="postPage-content">
@@ -311,9 +311,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -324,9 +324,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -337,9 +337,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -350,9 +350,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -363,9 +363,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -376,9 +376,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -389,9 +389,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -402,9 +402,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -415,9 +415,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -428,9 +428,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -441,9 +441,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -454,9 +454,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
@@ -467,9 +467,9 @@
                                 <a href="#" class="js-touchFocus">
                                     <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
                                     <div class="gridItem-info">
-                                        <h3>Artist Name max 60char Artist Name max 60char Artist Name ma</h3>
-                                        <p class="u-text--upper"><i>Medium | Genre</i></p>
-                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Artist</strong></p>
+                                        <h3>Vanue Name max 60char Vanue Name max 60char Vanue Name ma</h3>
+                                        <p class="u-text--upper"><i>Community</i></p>
+                                        <p class="gridItem-info-showHover gridItem-info-showHover--fSize"><strong>See Venue</strong></p>
                                     </div>
                                 </a>
                             </div>
