--- a/static-html/dev-html/partials-dev/venue-list-template.html
+++ b/static-html/dev-html/partials-dev/venue-list-template.html
@@ -4,7 +4,7 @@
 
             <article class="postPage">
                 <!--    Post title  -->
-                <h1 class="postPage-title u-text--center">Arts Calendar</h1>
+                <h1 class="postPage-title u-text--center">Venue Calendar</h1>
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
@@ -29,43 +29,43 @@
 
 <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
     <div class="column">
-        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+        <!-- build:section blocks.gridItemVenue --><!-- /build -->
     </div>
 </section>
 
