28554 have strange 1px border between 2 and 3 promobox, fixed with .end class on the last element

--- a/static-html/dev-html/partials-dev/index-page-template.html
+++ b/static-html/dev-html/partials-dev/index-page-template.html
@@ -13,7 +13,7 @@
         <div class="medium-4 column">
             <!-- build:section blocks.promoBox --><!-- /build -->
         </div>
-        <div class="medium-4 column">
+        <div class="medium-4 column end">
             <!-- build:section blocks.promoBox --><!-- /build -->
         </div>
     </div>
