--- a/static-html/dev-html/partials-dev/venue-list-template.html
+++ b/static-html/dev-html/partials-dev/venue-list-template.html
@@ -4,7 +4,7 @@
 
             <article class="postPage">
                 <!--    Post title  -->
-                <h1 class="postPage-title u-text--center">Venue Calendar</h1>
+                <h1 class="postPage-title u-text--center">Art Venues</h1>
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
@@ -25,7 +25,48 @@
 
 </div>
 
-<!-- build:section blocks.filters --><!-- /build -->
+<section class="u-background--gray directoryFilters">
+    <section class="row">
+        <div class="column">
+            <h2 class="u-text--center">NARROW DOWN VENUE</h2>
+            <p class="hide-for-medium">
+                <a href="#" class="btn btn--fullWidth js-toggle" data-toggle="js-filtersForm">Filters</a>
+            </p>
+        </div>
+    </section>
+    <form action="" class="directoryFilters-form js-filtersForm">
+        <section class="row">
+            <div class="halfMedium-6 medium-4 column">
+                <label for="eventType">Type</label>
+                <div class="form-row">
+                    <select id="eventType">
+                        <option value="All types">All types</option>
+                        <option value="Option 1">Option 1</option>
+                        <option value="Option 2">Option 2</option>
+                        <option value="Option 3">Option 3</option>
+                    </select>
+                </div>
+            </div>
+            <div class="medium-4 column">
+                <label for="location">Location</label>
+                <div class="form-row">
+                    <select id="location">
+                        <option value="All Communities">All Communities</option>
+                        <option value="Option 1">Option 1</option>
+                        <option value="Option 2">Option 2</option>
+                        <option value="Option 3">Option 3</option>
+                    </select>
+                </div>
+            </div>
+            <div class="halfMedium-6 medium-4 column">
+                <div class="form-row directoryFilters-action">
+                    <input type="submit" value="Go" class="btn btn--fullWidth btn--ocean">
+                </div>
+            </div>
+        </section>
+    </form>
+</section>
+
 
 <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
     <div class="column">
