28503 add submit event button, reduce bottom space in siteContent

--- a/static-html/dev-html/partials-dev/directory-template.html
+++ b/static-html/dev-html/partials-dev/directory-template.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <section class="column siteContent">
+    <section class="column siteContent siteContent--noBottomSpace">
         <section class="row column">
 
             <article class="postPage">
