--- a/static-html/dev-html/partials-dev/event-list-template.html
+++ b/static-html/dev-html/partials-dev/event-list-template.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <section class="column siteContent">
+    <section class="column siteContent siteContent--noBottomSpace">
         <section class="row column">
 
             <article class="postPage">
@@ -19,6 +19,12 @@
                 </div>  <!--    Post Content    -->
             </article>
 
+        </section>
+
+        <section class="row column">
+            <p class="u-text--center">
+                <a href="#" class="btn btn-middleWidth">SUBMIT YOUR EVENT</a>
+            </p>
         </section>
 
     </section>
