--- a/static-html/event-list-page.html
+++ b/static-html/event-list-page.html
@@ -210,7 +210,7 @@
                 <section class="siteBody">
 
                     <div class="row">
-                        <section class="column siteContent">
+                        <section class="column siteContent siteContent--noBottomSpace">
                             <section class="row column">
 
                                 <article class="postPage">
@@ -232,6 +232,12 @@
                                     <!--    Post Content    -->
                                 </article>
 
+                            </section>
+
+                            <section class="row column">
+                                <p class="u-text--center">
+                                    <a href="#" class="btn btn-middleWidth">SUBMIT YOUR EVENT</a>
+                                </p>
                             </section>
 
                         </section>
