--- a/static-html/venue-list-page.html
+++ b/static-html/venue-list-page.html
@@ -210,7 +210,7 @@
                 <section class="siteBody">
 
                     <div class="row">
-                        <section class="column siteContent">
+                        <section class="column siteContent siteContent--noBottomSpace">
                             <section class="row column">
 
                                 <article class="postPage">
