28555 added community section layout

--- a/static-html/dev-html/pages/index.html
+++ b/static-html/dev-html/pages/index.html
@@ -13,7 +13,7 @@
 
             <section class="siteBody">
 
-                <!-- Page Content goes here -->
+                <!-- build:section partials.indexPageLayout --><!-- /build -->
 
             </section>
 
