--- a/static-html/index.html
+++ b/static-html/index.html
@@ -227,7 +227,37 @@
 
                 <section class="siteBody">
 
-                    <!-- Page Content goes here -->
+                    <section class="communitySection">
+                        <div class="row communitySection-text">
+                            <div class="medium-11 medium-centered large-uncentered large-8 column">
+                                <h1>For The Art Community</h1>
+                                <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
+                            </div>
+                        </div>
+                        <div class="row js-community-equalHeight">
+                            <div class="small-4 column">
+                                <a href="#" class="communitySection-link" data-equal style="background-image: url(http://placehold.it/320x800)">
+                                    <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
+                                    <span>Some text for this links</span>
+                                </a>
+
+                            </div>
+                            <div class="small-4 column">
+                                <a href="#" class="communitySection-link" data-equal style="background-image: url(http://placehold.it/320x800)">
+                                    <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
+                                    <span>Some text for this links</span>
+                                </a>
+
+                            </div>
+                            <div class="small-4 column">
+                                <a href="#" class="communitySection-link" data-equal style="background-image: url(http://placehold.it/320x800)">
+                                    <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
+                                    <span>Some text for this links</span>
+                                </a>
+
+                            </div>
+                        </div>
+                    </section>
 
                 </section>
 
