--- a/static-html/dev-html/partials-dev/index-page-template.html
+++ b/static-html/dev-html/partials-dev/index-page-template.html
@@ -29,13 +29,25 @@
     </div>
     <div class="row js-community-equalHeight">
         <div class="small-4 column">
-            <!-- build:section blocks.communityBlock --><!-- /build -->
+            <a href="#" class="communitySection-link" data-equal>
+                <span class="communitySection-link-imgLayer" style="background-image: url(http://placehold.it/320x800)"></span>
+                <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
+                <span class="communitySection-link-text js-equalizer">Our Grants</span>
+            </a>
         </div>
         <div class="small-4 column">
-            <!-- build:section blocks.communityBlock --><!-- /build -->
+            <a href="#" class="communitySection-link" data-equal>
+                <span class="communitySection-link-imgLayer" style="background-image: url(http://placehold.it/320x800)"></span>
+                <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
+                <span class="communitySection-link-text js-equalizer">Learning Center</span>
+            </a>
         </div>
         <div class="small-4 column">
-            <!-- build:section blocks.communityBlock --><!-- /build -->
+            <a href="#" class="communitySection-link" data-equal>
+                <span class="communitySection-link-imgLayer" style="background-image: url(http://placehold.it/320x800)"></span>
+                <!-- NOTE: background-image: url(path_to_image) this image will be uploaded by client -->
+                <span class="communitySection-link-text js-equalizer">Artist Events</span>
+            </a>
         </div>
     </div>
 </section><!-- end .communitySection -->
