--- a/static-html/dev-html/blocks/grid-item-blog.html
+++ b/static-html/dev-html/blocks/grid-item-blog.html
@@ -1,6 +1,6 @@
 <div class="gridItem gridItem--blog">
     <a href="#" class="js-touchFocus">
-        <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/1480x1480 768w, http://placehold.it/800x800 1024w">
+        <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/960x960 480w ,http://placehold.it/1480x1480 768w, http://placehold.it/680x680 1024w,  http://placehold.it/940x940 1400w">
         <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
         <div class="gridItem-info">
             <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
