--- a/static-html/dev-html/partials-dev/index-page-template.html
+++ b/static-html/dev-html/partials-dev/index-page-template.html
@@ -1,12 +1,12 @@
-<section class="homeIntro">
-    <div class="row homeIntro-textInfo">
+<section class="homeSection homeSection--homeIntro">
+    <div class="row homeSection-text">
         <div class="medium-11 medium-centered large-uncentered large-8 column">
             <h1>What is Creative Pinellas?</h1>
             <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is
                 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
         </div>
     </div>
-    <div class="row small-collapse homeIntro-gridList">
+    <div class="row small-collapse homeSection--homeIntro-gridList">
         <div class="medium-4 column">
             <!-- build:section blocks.promoBox --><!-- /build -->
         </div>
@@ -19,8 +19,8 @@
     </div>
 </section><!-- end .homeIntro -->
 
-<section class="communitySection">
-    <div class="row communitySection-text">
+<section class="homeSection communitySection">
+    <div class="row homeSection-text">
         <div class="medium-11 medium-centered large-uncentered large-8 column">
             <h1>For The Art Community</h1>
             <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is
@@ -51,3 +51,51 @@
         </div>
     </div>
 </section><!-- end .communitySection -->
+
+<section class="homeSection homeSection--journalSection">
+    <div class="row homeSection-text">
+        <div class="medium-11 medium-centered large-uncentered large-8 column">
+            <h1>Our Journal</h1>
+            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is
+                1em/1.6em, Pragmatica Light, 300 weight.<br></p>
+        </div>
+    </div>
+    <div class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+        <div class="column">
+            <!-- build:section blocks.gridItemBlog --><!-- /build -->
+        </div>
+    </div>
+</section> <!-- end .journalSection -->
