28504 style form errors, made html as contact form 7 in WP

--- a/static-html/contact-page.html
+++ b/static-html/contact-page.html
@@ -117,94 +117,96 @@
             </div>
             <div class="off-canvas-content" data-off-canvas-content>
                 <header class="siteHeader">
-                    <section class="row siteHeader-top">
-                        <div class="small-9 medium-3 column">
-                            <div class="siteHeader-logo">
-                                <a href="#" title="Creative Pinellas">
-                                    <svg class='svgIcon svgIcon--logo'>
-                        <use xlink:href='#logoFull'/>
-                    </svg>
-                                </a>
+                    <div class="row siteHeader-inner">
+                        <section class="row column siteHeader-top">
+                            <div class="small-9 medium-3 column">
+                                <div class="siteHeader-logo">
+                                    <a href="#" title="Creative Pinellas">
+                                        <svg class='svgIcon svgIcon--logo'>
+                            <use xlink:href='#logoFull'/>
+                        </svg>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="small-3 medium-9 column u-text--right">
-                            <div class="show-for-medium siteHeader-social">
-                                <ul class="socialList u-list--plain u-list--inline">
-                                    <li>
-                                        <a href="#" target="_blank" title="Follow us on Twitter">
-                                            <svg class='svgIcon'>
+                            <div class="small-3 medium-9 column u-text--right">
+                                <div class="show-for-medium siteHeader-social">
+                                    <ul class="socialList u-list--plain u-list--inline">
+                                        <li>
+                                            <a href="#" target="_blank" title="Follow us on Twitter">
+                                                <svg class='svgIcon'>
                 <use xlink:href='#twitter'/>
             </svg>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" target="_blank" title="Follow us on Facebook">
-                                            <svg class='svgIcon'>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" target="_blank" title="Follow us on Facebook">
+                                                <svg class='svgIcon'>
                 <use xlink:href='#facebook'/>
             </svg>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" target="_blank" title="Follow us on Youtube">
-                                            <svg class='svgIcon'>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" target="_blank" title="Follow us on Youtube">
+                                                <svg class='svgIcon'>
                 <use xlink:href='#youtube'/>
             </svg>
-                                        </a>
-                                    </li>
-                                </ul>
+                                            </a>
+                                        </li>
+                                    </ul>
 
+                                </div>
+                                <nav class="show-for-medium siteHeader-topNav">
+                                    <ul class="siteNavigation u-list--plain u-list--inline">
+                                        <li>
+                                            <a href="#">Contact Us</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                                <nav class="show-for-large">
+                                    <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left js-touchNav">
+                                        <li class="has-subNav js-hasSubNav">
+                                            <a href="#">About</a>
+                                            <ul class="u-list--plain">
+                                                <li><a href="#">Our Team</a></li>
+                                                <li><a href="#">Partnership</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="has-subNav js-hasSubNav">
+                                            <a href="#">For the arts community</a>
+                                            <ul class="u-list--plain">
+                                                <li><a href="#">Oure Grants</a></li>
+                                                <li><a href="#">Grant Recipients</a></li>
+                                                <li><a href="#">Learning Center</a></li>
+                                                <li><a href="#">Events for Artists</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="has-subNav js-hasSubNav">
+                                            <a href="#">Explore the arts</a>
+                                            <ul class="u-list--plain">
+                                                <li><a href="#">Events</a></li>
+                                                <li><a href="#">Venue Directory</a></li>
+                                                <li><a href="#">Local Artists Directory</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="has-subNav js-hasSubNav">
+                                            <a href="#">Our journal</a>
+                                            <ul class="u-list--plain">
+                                                <li><a href="#">Learning Center</a></li>
+                                                <li><a href="#">Visual Arts</a></li>
+                                                <li><a href="#">Music</a></li>
+                                                <li><a href="#">Performing Arts</a></li>
+                                                <li><a href="#">Literature</a></li>
+                                                <li><a href="#">News</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </nav>
+                                <a href="#" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
+                                    <span class="mobileNavToggle-hamburger"><span></span></span>
+                                </a>
                             </div>
-                            <nav class="show-for-medium siteHeader-topNav">
-                                <ul class="siteNavigation u-list--plain u-list--inline">
-                                    <li>
-                                        <a href="#">Contact Us</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                            <nav class="show-for-large">
-                                <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left js-touchNav">
-                                    <li class="has-subNav js-hasSubNav">
-                                        <a href="#">About</a>
-                                        <ul class="u-list--plain">
-                                            <li><a href="#">Our Team</a></li>
-                                            <li><a href="#">Partnership</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="has-subNav js-hasSubNav">
-                                        <a href="#">For the arts community</a>
-                                        <ul class="u-list--plain">
-                                            <li><a href="#">Oure Grants</a></li>
-                                            <li><a href="#">Grant Recipients</a></li>
-                                            <li><a href="#">Learning Center</a></li>
-                                            <li><a href="#">Events for Artists</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="has-subNav js-hasSubNav">
-                                        <a href="#">Explore the arts</a>
-                                        <ul class="u-list--plain">
-                                            <li><a href="#">Events</a></li>
-                                            <li><a href="#">Venue Directory</a></li>
-                                            <li><a href="#">Local Artists Directory</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="has-subNav js-hasSubNav">
-                                        <a href="#">Our journal</a>
-                                        <ul class="u-list--plain">
-                                            <li><a href="#">Learning Center</a></li>
-                                            <li><a href="#">Visual Arts</a></li>
-                                            <li><a href="#">Music</a></li>
-                                            <li><a href="#">Performing Arts</a></li>
-                                            <li><a href="#">Literature</a></li>
-                                            <li><a href="#">News</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </nav>
-                            <a href="#" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
-                                <span class="mobileNavToggle-hamburger"><span></span></span>
-                            </a>
-                        </div>
-                    </section>
+                        </section>
+                    </div>
                 </header>
 
                 <section class="siteBody">
@@ -225,34 +227,55 @@
                                         </div>
 
                                         <div class="contactForm">
-                                            <form action="#" class="formElement">
-                                                <div class="formElement-row large-5">
-                                                    <label for="name_field">Name</label>
-                                                    <input type="text" name="name_field" id="name_field">
+                                            <form action="#">
+                                                <!-- TODO: default wp Contact7 form error and success message, replase only text -->
+                                                <div class="wpcf7-response-output wpcf7-display-none wpcf7-validation-errors" role="alert" style="display: block;">There was a problem with your submission. Errors are highlighter below</div>
+
+                                                <div class="wpcf7-response-output wpcf7-display-none wpcf7-mail-sent-ok" style="display: block;" role="alert">Thank you for your message. It has been sent.</div>
+                                                <!-- TODO: end -->
+
+                                                <div class="large-5">
+                                                    <label for="name_field">Name *</label>
+                                                    <!--    TODO: span will be generated automaticly with Form7-->
+                                                    <span class="wpcf7-form-control-wrap">
+                                    <input type="text" name="name_field" id="name_field" class="wpcf7-not-valid">
+                                    <!--    TODO: error messages is default from Form7 -->
+                                    <span role="alert" class="wpcf7-not-valid-tip">The field is required.</span>
+                                                    </span>
                                                 </div>
-                                                <div class="formElement-row large-5">
-                                                    <label for="email_field">Email</label>
-                                                    <input type="email" name="email_field" id="email_field">
+                                                <div class="large-5">
+                                                    <label for="email_field">Email *</label>
+                                                    <span class="wpcf7-form-control-wrap">
+                                    <input type="email" name="email_field" id="email_field">
+                                </span>
                                                 </div>
-                                                <div class="formElement-row large-5">
+                                                <div class="large-5">
                                                     <label for="org_field">Organization</label>
-                                                    <input type="text" name="org_field" id="org_field">
+                                                    <span class="wpcf7-form-control-wrap">
+                                    <input type="text" name="org_field" id="org_field">
+                                </span>
                                                 </div>
-                                                <div class="formElement-row large-5">
+                                                <div class="large-5">
                                                     <label for="person_select">I am a(n)</label>
-                                                    <select id="person_select" name="person_select">
-                                    <option value="Artist">Artist</option>
-                                    <option value="Art Lover">Art Lover</option>
-                                    <option value="Member of Media">Member of Media</option>
-                                    <option value="Other">Other</option>
-                                </select>
+                                                    <span class="wpcf7-form-control-wrap">
+                                    <select id="person_select" name="person_select">
+                                        <option value="Artist">Artist</option>
+                                        <option value="Art Lover">Art Lover</option>
+                                        <option value="Member of Media">Member of Media</option>
+                                        <option value="Other">Other</option>
+                                    </select>
+                                </span>
                                                 </div>
-                                                <div class="formElement-row">
-                                                    <label for="org_field">Message</label>
-                                                    <textarea></textarea>
+                                                <div class="small-12">
+                                                    <label for="org_field">Message *</label>
+                                                    <span class="wpcf7-form-control-wrap">
+                                    <textarea></textarea>
+                                </span>
                                                 </div>
-                                                <div class="formElement-row">
-                                                    <input type="submit" value="Submit">
+                                                <div class="small-12">
+                                                    <div class="form-row">
+                                                        <input type="submit" value="Submit" class="btn btn-middleWidth btn--ocean">
+                                                    </div>
                                                 </div>
                                             </form>
                                         </div>
