28716 add navigation class to regular header

--- a/static-html/dev-html/partials-dev/header.html
+++ b/static-html/dev-html/partials-dev/header.html
@@ -21,7 +21,7 @@
                         </li>
                     </ul>
                 </nav>
-                <nav class="show-for-large">
+                <nav class="show-for-large siteHeader-mainNav">
                     <ul class="siteNavigation siteNavigation--header u-list--plain u-list--inline u-text--left js-touchNav">
                         <li class="has-subNav js-hasSubNav">
                             <a href="#">About</a>
